Add roundtrip tests to metadata tests, fix serialization bugs (#49)
## Summary

Added roundtrip tests to all metadata tests in `facet-styx` and fixed serialization bugs that were uncovered.

### What was done

- Added roundtrip assertions to all 23 metadata tests that were missing them
- Fixed 3 serialization bugs discovered through the new tests

### Bugs Fixed

1. **Tag on unit serialization** - When serializing a metadata container with a tag wrapping a unit `()`, it was outputting `@ok@` instead of `@ok`. Fixed by checking `just_wrote_tag` in `scalar()` for unit values.

2. **Tag on map keys not serialized** - When a map key was a metadata container with both a name and tag (like `@key"foo"`), the tag was being ignored. Fixed by using `FieldKey::tagged_with_name_and_doc` when both name and tag are present.

3. **Test helper cleanup** - Consolidated `assert_is` to take `Option<&[&str]>` for doc lines instead of having a separate `assert_doc_lines` method.

### Test structure

All tests use a single `WithMeta<T>` wrapper that captures span, doc, and tag metadata:

```rust
#[derive(Debug, Clone, Facet)]
#[facet(metadata_container)]
pub struct WithMeta<T> {
    pub value: T,
    #[facet(metadata = "span")]
    pub span: Option<Span>,
    #[facet(metadata = "doc")]
    pub doc: Option<Vec<String>>,
    #[facet(metadata = "tag")]
    pub tag: Option<String>,
}
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,15 +55,16 @@ opt-level = "s"
 inherits = "release"
 lto = "thin"
 
-# Uncomment to develop facet
-[patch."https://github.com/facet-rs/facet"]
-facet = { path = "../facet/facet" }
-facet-core = { path = "../facet/facet-core" }
-facet-reflect = { path = "../facet/facet-reflect" }
-facet-format = { path = "../facet/facet-format" }
-facet-path = { path = "../facet/facet-path" }
-facet-postcard = { path = "../facet/facet-postcard" }
-facet-pretty = { path = "../facet/facet-pretty" }
-facet-value = { path = "../facet/facet-value" }
-facet-dessert = { path = "../facet/facet-dessert" }
-facet-solver = { path = "../facet/facet-solver" }
+# # Uncomment to develop facet
+# [patch."https://github.com/facet-rs/facet"]
+# facet = { path = "../facet/facet" }
+# facet-core = { path = "../facet/facet-core" }
+# facet-reflect = { path = "../facet/facet-reflect" }
+# facet-format = { path = "../facet/facet-format" }
+# facet-path = { path = "../facet/facet-path" }
+# facet-postcard = { path = "../facet/facet-postcard" }
+# facet-pretty = { path = "../facet/facet-pretty" }
+# facet-value = { path = "../facet/facet-value" }
+# facet-dessert = { path = "../facet/facet-dessert" }
+# facet-solver = { path = "../facet/facet-solver" }
+# facet-json = { path = "../facet/facet-json" }
