chore: Update domain from bearcove.net to bearcove.eu

--- a/crates/styx-wasm/package.json
+++ b/crates/styx-wasm/package.json
@@ -26,7 +26,7 @@
     "parser",
     "configuration"
   ],
-  "author": "Amos Wenger <amos@bearcove.net>",
+  "author": "Amos Wenger <amos@bearcove.eu>",
   "license": "MIT OR Apache-2.0",
   "repository": {
     "type": "git",
@@ -36,7 +36,7 @@
   "bugs": {
     "url": "https://github.com/bearcove/styx/issues"
   },
-  "homepage": "https://styx.bearcove.net",
+  "homepage": "https://styx.bearcove.eu",
   "publishConfig": {
     "access": "public"
   }
