--- a/editors/codemirror-styx/package.json
+++ b/editors/codemirror-styx/package.json
@@ -32,7 +32,7 @@
     "syntax-highlighting",
     "editor"
   ],
-  "author": "Amos Wenger <amos@bearcove.net>",
+  "author": "Amos Wenger <amos@bearcove.eu>",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -42,7 +42,7 @@
   "bugs": {
     "url": "https://github.com/bearcove/styx/issues"
   },
-  "homepage": "https://styx.bearcove.net",
+  "homepage": "https://styx.bearcove.eu",
   "devDependencies": {
     "@lezer/generator": "^1.7.0",
     "tsup": "^8.0.0",
