--- a/playgrounds/monaco/package.json
+++ b/playgrounds/monaco/package.json
@@ -28,7 +28,7 @@
     "editor",
     "vim"
   ],
-  "author": "Amos Wenger <amos@bearcove.net>",
+  "author": "Amos Wenger <amos@bearcove.eu>",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -38,7 +38,7 @@
   "bugs": {
     "url": "https://github.com/bearcove/styx/issues"
   },
-  "homepage": "https://styx.bearcove.net",
+  "homepage": "https://styx.bearcove.eu",
   "dependencies": {
     "@bearcove/monaco-lang-styx": "workspace:*",
     "monaco-vim": "^0.4.1"
